--- a/style.css
+++ b/style.css
@@ -1,54 +1,71 @@
-/* styles.css */
 body {
-    font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    background-color: #121212;
-    color: #ffffff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif;
+  color: #e0e0e0;
+  background-image: url("https://github.com/Woschj/Catchy-Customs/blob/main/CC_Logo_Wortmarke.png?raw=true");
+  background-size: cover; /* Hintergrundbild wird gestreckt, um den gesamten Bildschirm zu füllen */
+  background-repeat: no-repeat; /* Hintergrundbild wird nicht wiederholt */
+  background-attachment: fixed; /* Hintergrundbild bleibt beim Scrollen fixiert */
+  background-position: center center; /* Hintergrundbild wird zentriert */
 }
 
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none; /* Initially hidden */
+h1 {
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: #ffffff;
+  text-align: center;
+  font-size: 2rem;
 }
 
-.dropdown-container {
-    background-color: #1e1e1e;
-    padding: 20px;
-    border-radius: 20px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    margin-right: 20px;
+#container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 }
 
-select {
-    padding: 12px;
-    border: 1px solid #333;
-    border-radius: 10px;
-    font-size: 16px;
-    background-color: #2c2c2c;
-    color: #ffffff;
-    transition: border-color 0.3s, background-color 0.3s;
+#controls {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background: rgba(30, 30, 30, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  margin-right: 20px;
 }
 
-select:focus {
-    border-color: #007aff;
-    outline: none;
+#controls label {
+  font-size: 14px;
+  margin-bottom: 8px;
+  color: #b3b3b3;
 }
 
-canvas {
-    border: 1px solid #333;
-    border-radius: 20px;
-    background-color: #1e1e1e;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+#controls select,
+#controls input,
+#controls button {
+  width: 200px;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #333;
+  border-radius: 5px;
+  font-size: 16px;
+  font-family: inherit;
+  background: #2c2c2c;
+  color: #e0e0e0;
+  outline: none;
+  transition: border-color 0.2s ease;
+}
+
+#controls select:focus,
+#controls input:focus,
+#controls button:focus {
+  border-color: #0071e3;
+}
+
+#preview-canvas {
+  border: 1px solid #333;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  background: rgba(30, 30, 30, 0.8);
+  position: relative;
 }
